objects/CSS_Quote__c.object
<CustomObject>
    <fields>
        <fullName>AcceptQuote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AcceptQuote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accepted_By__c</fullName>
        <label>Accepted By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accepted_Method__c</fullName>
        <label>Accepted Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Select One</fullName>
                    <default>true</default>
                    <label>Select One</label>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>In Person</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Text Message</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BranchCode__c</fullName>
        <label>BranchCode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerNumber__c</fullName>
        <label>CustomerNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Accepted__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date Accepted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DiagnosticCharges__c</fullName>
        <label>DiagnosticCharges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DistributorCode__c</fullName>
        <label>DistributorCode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrandTotal__c</fullName>
        <label>GrandTotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ItemBillable__c</fullName>
        <label>ItemBillable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ItemGrossSell__c</fullName>
        <label>ItemGrossSell</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ItemWarranty__c</fullName>
        <label>ItemWarranty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LaborBillable__c</fullName>
        <label>LaborBillable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LaborGrossSell__c</fullName>
        <label>LaborGrossSell</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LaborWarranty__c</fullName>
        <label>LaborWarranty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LocationID__c</fullName>
        <label>LocationID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiscBillable__c</fullName>
        <label>MiscBillable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MiscGrossSell__c</fullName>
        <label>MiscGrossSell</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MiscWarranty__c</fullName>
        <label>MiscWarranty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderReference__c</fullName>
        <label>OrderReference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <label>Purchase Order</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteTotal__c</fullName>
        <label>QuoteTotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_decline_Reason__c</fullName>
        <description>Text Box to capture notes for declining quote</description>
        <label>Quote_decline_Reason</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_Quote_is_Declined__c</fullName>
        <label>Reason Quote is Declined</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Received_Amount__c</fullName>
        <label>Received Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SenderID__c</fullName>
        <label>SenderID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceName__c</fullName>
        <label>ServiceName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Job</label>
        <referenceTo>CSS_Job_Order__c</referenceTo>
        <relationshipLabel>CSS Quotes</relationshipLabel>
        <relationshipName>CSS_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Surcharge__c</fullName>
        <label>Surcharge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TargetID__c</fullName>
        <label>TargetID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taxes__c</fullName>
        <label>Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TransactionType__c</fullName>
        <label>TransactionType</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>CSS Quote</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BranchCode__c</columns>
        <columns>CustomerNumber__c</columns>
        <columns>DiagnosticCharges__c</columns>
        <columns>DistributorCode__c</columns>
        <columns>GrandTotal__c</columns>
        <columns>ItemBillable__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Quote-{0000}</displayFormat>
        <label>CSS Quote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSS Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>